# faderflow

./: .gitignore  LICENSE  README.md  TODO.md
desktop/faderflow/: Cargo.toml
desktop/faderflow/src/: main.rs
desktop/faderflow/src/audio/: backend.rs  mod.rs  session.rs
desktop/faderflow/src/audio/platform/: linux.rs  macos.rs  mod.rs  windows.rs
desktop/faderflow/src/comms/: device_info.rs  mod.rs  protocol.rs  scanner.rs
desktop/faderflow/src/ui/: app.rs  mod.rs  resources.rs
desktop/faderflow/src/ui/views/: about.rs  devices.rs  mod.rs  no_devices.rs  scanning.rs  sessions.rs  settings.rs
desktop/faderflow/src/utils/: config.rs  icon.rs  mod.rs
firmware/FaderFlow/: FaderFlow.ino  comms.cpp  device_id.h  fader.cpp  icon.cpp  icon.h  platformio.ini  protocol.h
firmware/FaderFlow/src/: channel.cpp  channel.h  config.h  main.cpp  main.h  protocol.h  test_icon_data.h
pcb/Arduino Shield/: Arduino Shield.kicad_pcb  Arduino Shield.kicad_prl  Arduino Shield.kicad_pro  Arduino Shield.kicad_sch  Arduino Shield.kicad_sch-bak  fp-info-cache
pcb/Arduino Shield/Arduino_MountingHole.pretty/: MountingHole_1.2mm.kicad_mod  MountingHole_3.2mm.kicad_mod  MountingHole_65mil.kicad_mod
pcb/Arduino Shield/Gerbers/: Arduino Shield-B_Courtyard.gbr  Arduino Shield-B_Cu.gbr  Arduino Shield-B_Mask.gbr  (+9 more)
pcb/Channel/: Channel.kicad_pcb  Channel.kicad_prl  Channel.kicad_pro  Channel.kicad_sch  Channel.step  Channel.stl  fp-info-cache
pcb/Teensy (V2)/: #auto_saved_files#  Teensy Version.kicad_pcb  Teensy Version.kicad_prl  Teensy Version.kicad_pro  Teensy Version.kicad_sch
(+24 files in other folders)
